# task-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy_requirements.txt  noxfile.py  pyproject.toml
.github/workflows/: build.yml  test.yml
alembic/: env.py
alembic/versions/: 961b4952e8cf_initial_tables_creation.py
deploy/: run.sh
src/task_api/: main.py
src/task_api/api/: schema.py
src/task_api/auth/: oauth.py  utils.py
src/task_api/db/: connect.py  models.py  operation.py
test/: test_stub.py
tests/unit/api/: test_schema.py
tests/unit/auth/: test_oauth.py  test_utils.py
tests/unit/db/: test_connect.py  test_models.py  test_operation.py  utils.py
